implement mission operations